# LearnCplusplus

./: CMakeLists.txt  main.cpp  point_about.cpp  point_about.h
base/: studentInfo.cpp  studentInfo.h
